--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-
+<h1>Linux</h1>
 <script src="js/script.js"></script>
 </body>
 </html>
