Started adding directories

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 <h1>Linux</h1>
+<h2>Filesystem</h2>
+<div id="filesystem">
+<div class="directory" id="bin">/bin</div>
+<div class="directory" id="boot">/boot</div>
+</div>
 <script src="js/script.js"></script>
 </body>
 </html>
