Finished adding all the directories

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 <div id="filesystem">
 <div class="directory" id="bin">/bin</div>
 <div class="directory" id="boot">/boot</div>
+<div class="directory" id="dev">/dev</div>
+<div class="directory" id="etc">/etc</div>
+<div class="directory" id="home">/home</div>
+<div class="directory" id="media">/media</div>
+<div class="directory" id="lib">/lib</div>
+<div class="directory" id="mnt">/mnt</div>
+<div class="directory" id="misc">/misc</div>
+<div class="directory" id="opt">/opt</div>
+<div class="directory" id="proc">/proc</div>
+<div class="directory" id="root">/root</div>
+<div class="directory" id="sbin">/sbin</div>
+<div class="directory" id="tmp">/tmp</div>
+<div class="directory" id="usr">/usr</div>
+<div class="directory" id="var">/var</div>
 </div>
 <script src="js/script.js"></script>
 </body>
