Better directory alignment

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Linux</h1>
 <h2>Filesystem</h2>
 <div id="filesystem">
+<div class="directory" id="parent">/</div>
 <div class="directory" id="bin">/bin</div>
 <div class="directory" id="boot">/boot</div>
 <div class="directory" id="dev">/dev</div>
@@ -17,10 +18,9 @@
 <div class="directory" id="media">/media</div>
 <div class="directory" id="lib">/lib</div>
 <div class="directory" id="mnt">/mnt</div>
-<div class="directory" id="misc">/misc</div>
 <div class="directory" id="opt">/opt</div>
 <div class="directory" id="proc">/proc</div>
-<div class="directory" id="root">/root</div>
+<div class="directory" id="srv">/srv</div>
 <div class="directory" id="sbin">/sbin</div>
 <div class="directory" id="tmp">/tmp</div>
 <div class="directory" id="usr">/usr</div>
