--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <div class="directory" id="tmp">/tmp</div>
 <div class="directory" id="usr">/usr</div>
 <div class="directory" id="var">/var</div>
+<p id="binDescription">User Binaries go in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
