Added description for the /sbin directory

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <div class="directory" id="usr">/usr</div>
 <div class="directory" id="var">/var</div>
 <p id="binDescription">User Binaries go in this Directory</p>
+<p id="sbinDescription">System Binaries go in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
