--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <p id="binDescription">User Binaries go in this Directory</p>
 <p id="sbinDescription">System Binaries go in this Directory</p>
 <p id="etcDescription">Configuration Files go in this Directory</p>
+<p id="devDescription">Device Files go in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
