Added description for /proc directory

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <div class="directory" id="tmp">/tmp</div>
 <div class="directory" id="usr">/usr</div>
 <div class="directory" id="var">/var</div>
-<p id="binDescription">User Binaries go in this Directory</p>
-<p id="sbinDescription">System Binaries go in this Directory</p>
-<p id="etcDescription">Configuration Files go in this Directory</p>
-<p id="devDescription">Device Files go in this Directory</p>
+<p id="binDescription">User Binaries goes in this Directory</p>
+<p id="sbinDescription">System Binaries goes in this Directory</p>
+<p id="etcDescription">Configuration Files goes in this Directory</p>
+<p id="devDescription">Device Files goes in this Directory</p>
+<p id="procDescription">Process Information goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
