--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <p id="etcDescription">Configuration Files goes in this Directory</p>
 <p id="devDescription">Device Files goes in this Directory</p>
 <p id="procDescription">Process Information goes in this Directory</p>
+<p id="varDescription">Variable Files goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
