--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <p id="devDescription">Device Files goes in this Directory</p>
 <p id="procDescription">Process Information goes in this Directory</p>
 <p id="varDescription">Variable Files goes in this Directory</p>
+<p id="tmpDescription">Temporary Files goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
