Added description for /usr directory

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <p id="procDescription">Process Information goes in this Directory</p>
 <p id="varDescription">Variable Files goes in this Directory</p>
 <p id="tmpDescription">Temporary Files goes in this Directory</p>
+<p id="usrDescription">User Programs goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
