Added description for /home directory

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <p id="varDescription">Variable Files goes in this Directory</p>
 <p id="tmpDescription">Temporary Files goes in this Directory</p>
 <p id="usrDescription">User Programs goes in this Directory</p>
+<p id="homeDescription">Home Directories goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
