--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <p id="tmpDescription">Temporary Files goes in this Directory</p>
 <p id="usrDescription">User Programs goes in this Directory</p>
 <p id="homeDescription">Home Directories goes in this Directory</p>
+<p id="bootDescription">Boot Loader Files goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
