--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <p id="homeDescription">Home Directories goes in this Directory</p>
 <p id="bootDescription">Boot Loader Files goes in this Directory</p>
 <p id="libDescription">System Libraries goes in this Directory</p>
+<p id="optDescription">Optional add-on Apps goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
