Added description for /mnt directory

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <p id="bootDescription">Boot Loader Files goes in this Directory</p>
 <p id="libDescription">System Libraries goes in this Directory</p>
 <p id="optDescription">Optional add-on Apps goes in this Directory</p>
+<p id="mntDescription">Mount Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
