Added description for /media directory

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <p id="libDescription">System Libraries goes in this Directory</p>
 <p id="optDescription">Optional add-on Apps goes in this Directory</p>
 <p id="mntDescription">Mount Directory</p>
+<p id="mediaDescription">Removable Devices goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
