Added description for /srv directory

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <p id="optDescription">Optional add-on Apps goes in this Directory</p>
 <p id="mntDescription">Mount Directory</p>
 <p id="mediaDescription">Removable Devices goes in this Directory</p>
+<p id="srvDescription">Service Data goes in this Directory</p>
 </div>
 <script src="js/script.js"></script>
 </body>
