Added tutorial progress

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Linux</h1>
+<progress value="0.00">0 percent done</progress>
 <h2>Filesystem</h2>
 <div id="filesystem">
 <div class="directory" id="parent">/</div>
@@ -41,6 +42,7 @@
 <p id="mediaDescription">Removable Devices goes in this Directory</p>
 <p id="srvDescription">Service Data goes in this Directory</p>
 </div>
+<button type="button" id="nextPage">Next page</button>
 <script src="js/script.js"></script>
 </body>
 </html>
